# galital

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  customSpec.json
.maintain/common/: lib.sh
.maintain/gitlab/: publish_draft_release.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
