[package]
authors = ['Starkley Tech <contact@starkleytech.com>']
build = 'build.rs'
description = 'Galital substrate based node'
edition = '2018'
homepage = 'https://starkleytech.com'
license = 'GNU v3'
name = 'galital'
repository = 'https://github.com/starkleytech/galital'
version = '3.0.0'

[[bin]]
name = 'galital'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# Substrate dependencies
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master"  }
frame-benchmarking = { version = "3.1.0", git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master"  }
pallet-transaction-payment-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { version = "0.9.0",git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master", features = ['wasmtime'] }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master", features = ['wasmtime'] }
sc-finality-grandpa = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master", features = ['wasmtime'] }
sc-telemetry = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-aura = { version = "0.9.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-finality-grandpa = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

# local dependencies
galital-runtime = { path = '../runtime', version = '3.0.0' }

[features]
default = []
runtime-benchmarks = ['galital-runtime/runtime-benchmarks']
